fixed direction 1 nav
i figured out the issue, and was able to fix it. still need to add blurry effect on regular nav

--- a/direction-1/style.css
+++ b/direction-1/style.css
@@ -14,6 +14,7 @@
 /* NAV BAR */
 nav {
     height: 60px;
+    background-color: var(--text-color);
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -21,8 +22,8 @@ nav {
     top: 0;
     left: 0;
     width: 100%;
-    background-color: rgba(255, 255, 255, 0.2);
-    backdrop-filter: blur(20px);
+    /* background-color: rgba(255, 255, 255, 0.2); */
+    /* backdrop-filter: blur(20px); */
     /* z-index: 20; */
 }
 
