--- a/direction-2/style.css
+++ b/direction-2/style.css
@@ -15,12 +15,6 @@ body {
     background-color: #faf9f6;
 }
 
-/* ol {
-    display: flex;
-    justify-content: space-around;
-    padding-block-end: 10rem;
-/* } */ 
-
 h1 {
     text-align: center;
     font-size: 10rem;
@@ -36,7 +30,6 @@ h1 {
     .author {
         font-weight: 600;
     }
-
 }
 
 em {
@@ -63,6 +56,14 @@ nav {
     display: flex;
     justify-content: flex-end;
     align-items: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /* background-color: rgba(255, 255, 255, 0.2); */
+    /* background-color: color-mix(in srgb, var(--text-color) 20%, transparent); */
+    /* backdrop-filter: blur(20px);  */
+    /* -webkit-backdrop-filter: blur(20px); */
 }
 
 .links-container {
@@ -71,6 +72,7 @@ nav {
     display: flex;
     flex-direction: row;
     align-items: center;
+    padding: 0 30px 0 30px;
 }
 
 nav a {
